k8s/frontend-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: app
        image: ghcr.io/kenyereskrisztian/frontend-service:latest
        ports:
        - containerPort: 5500
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 5500
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 5500
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 5500
          initialDelaySeconds: 30
          periodSeconds: 15
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
